# cairo

./: .gitignore  .gitlab-ci.yml  BUGS  HACKING  INSTALL.meson  Makefile.am  NEWS  README  RELEASING  cairo-version.h  configure.ac  meson.build  meson_options.txt  version.py
.gitlab-ci/: ignore-image-argb32.txt  ignore-image-rgb24.txt  ignore-image16-rgb24.txt  ignore-pdf-argb32.txt  ignore-pdf-rgb24.txt  ignore-quartz-argb32.txt  ignore-quartz-rgb24.txt  ignore-recording-argb32.txt  ignore-recording-rgb24.txt  ignore-script-argb32.txt  ignore-svg11-argb32.txt  ignore-svg11-rgb24.txt  ignore-xcb-argb32.txt  ignore-xcb-fallback-rgb24.txt  ignore-xcb-render-0-0-argb32.txt  ignore-xcb-render-0-0-rgb24.txt  ignore-xcb-rgb24.txt  ignore-xcb-window&-rgb24.txt  ignore-xlib-argb32.txt  ignore-xlib-fallback-rgb24.txt  ignore-xlib-render-0-0-rgb24.txt  ignore-xlib-rgb24.txt  ignore-xlib-window-rgb24.txt
boilerplate/: Makefile.win32.features  cairo-boilerplate-cogl.c  cairo-boilerplate-svg.c  cairo-boilerplate-vg.c  cairo-boilerplate-win32-printing.c  cairo-boilerplate-xcb.c  cairo-boilerplate.c  cairo-boilerplate.h  meson.build
doc/public/: cairo-sections.txt  meson.build
perf/: cairo-analyse-trace.c  cairo-perf-graph-widget.c  cairo-perf-report.c  cairo-perf-trace.c  meson.build
perf/micro/: meson.build
src/: 0001-polygon-intersection-Check-for-invalid-right-edge.patch  Makefile.sources  cairo-analysis-surface.c  cairo-atomic-private.h  cairo-bentley-ottmann.c  cairo-box-inline.h  cairo-cff-subset.c  cairo-clip-boxes.c  cairo-clip-tor-scan-converter.c  cairo-cogl-context-private.h  cairo-cogl-context.c  cairo-cogl-gradient-private.h  cairo-cogl-gradient.c  cairo-cogl-private.h  cairo-cogl-surface.c  cairo-cogl-utils-private.h  cairo-cogl-utils.c  cairo-cogl.h  cairo-compiler-private.h  cairo-composite-rectangles.c  cairo-debug.c  cairo-default-context.c  cairo-device.c  cairo-error-private.h  cairo-fixed-private.h  cairo-font-options.c  cairo-ft-font.c  cairo-ft.h  cairo-gl-composite.c  cairo-gl-device.c  cairo-gl-gradient.c  cairo-gl-info.c  cairo-gl-msaa-compositor.c  cairo-gl-private.h  cairo-gl-shaders.c  cairo-gl-surface.c  cairo-gl-traps-compositor.c  cairo-gl.h  cairo-gstate.c  cairo-hash-private.h  (+77 more)
src/drm/: cairo-drm-i915-surface.c  cairo-drm-intel-ioctl-private.h  cairo-drm-intel-private.h  cairo-drm-intel-surface.c  cairo-drm-intel.c  cairo-drm-radeon-surface.c  cairo-drm-radeon.c
src/skia/: cairo-skia-context.cpp  cairo-skia-surface.cpp
src/win32/: cairo-win32-device.c  cairo-win32-display-surface.c  cairo-win32-font.c  cairo-win32-gdi-compositor.c  cairo-win32-printing-surface.c  cairo-win32-private.h  cairo-win32-surface.c
subprojects/: .gitignore  fontconfig.wrap  glib.wrap  pixman.wrap  zlib.wrap
test/: .gitignore  Makefile.am  Makefile.sources  README  any2ppm.c  api-special-cases.c  buffer-diff.c  bug-431.c  bug-image-compositor.c  cairo-test-runner.c  cairo-test-trace.c  cairo-test.c  cairo-test.h  composite-integer-translate-over.c  coverage.c  create-for-stream.c  error-setters.c  font-variations.c  ft-color-font.c  get-path-extents.c  hairline.c  leaky-dashed-rectangle.c  map-to-image.c  meson.build  mime-data.c  mime-unique-id.c  operator-www.c  overflow.c  pdf-mime-data.c  pdf-operators-text.c  pdf-tagged-text.c  recordflip.c  shifted-operator.c  simple.c  svg2png.c  user-font-color.c
test/pdiff/: meson.build  pdiff.c
util/: Makefile.am  README  meson.build
util/cairo-fdr/: fdr.c  meson.build
util/cairo-gobject/: cairo-gobject-enums.c  cairo-gobject-structs.c  meson.build
util/cairo-missing/: meson.build
util/cairo-script/: Makefile.am  cairo-script-hash.c  cairo-script-interpreter-uninstalled.pc.in  cairo-script-interpreter.c  cairo-script-interpreter.pc.in  cairo-script-operators.c  cairo-script-private.h  cairo-script-scanner.c  csi-bind.c  csi-exec.c  csi-replay.c  csi-trace.c  meson.build
util/cairo-sphinx/: fdr.c  meson.build  sphinx.c
util/cairo-trace/: lookup-symbol.c  meson.build  trace.c
